--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = 3rd/openssl
 	url = git@github.com:openssl/openssl.git
 	branch = 1.0.2-aead
+[submodule "3rd/lua-cjson"]
+	path = 3rd/lua-cjson
+	url = https://github.com/cloudwu/lua-cjson.git
