--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "3rd/lua-cjson"]
 	path = 3rd/lua-cjson
 	url = https://github.com/cloudwu/lua-cjson.git
+[submodule "3rd/lsocket"]
+	path = 3rd/lsocket
+	url = https://github.com/cloudwu/lsocket.git
