--- a/server/config
+++ b/server/config
@@ -1,18 +1,20 @@
-skynet_root = "../3rd/skynet/"
-root = "./"
-common = "../common/"
+skynet_root = "3rd/skynet"
+server_root = "server"
+common_root = "common"
+
 thread = 8
 -- logger = "$SERVER_NAME"
--- logservice = "syslog"
 harbor = 0
 start = "main"	-- main script
 bootstrap = "snlua bootstrap"	-- The service for bootstrap
 
-lua_path = skynet_root.."lualib/?.lua;"..root.."lualib/?.lua;"..root.."lualib/base/?.lua;"..common.."?.lua"
-lua_cpath = skynet_root.."luaclib/?.so;"..root.."luaclib/?.so"
-cpath = skynet_root.."cservice/?.so;"..root.."cservice/?.so"
-luaservice = skynet_root.."service/?.lua;"..root.."service/?.lua"
-lualoader = skynet_root.."lualib/loader.lua"
+-- table.concat({}, ";")
+lua_path = server_root.."/lualib/?.lua;"..common_root.."/lualib/?.lua;"..skynet_root.."/lualib/?.lua"
+lua_cpath = server_root.."/luaclib/?.so;"..common_root.."/luaclib/?.so;"..skynet_root.."/luaclib/?.so"
+cpath = server_root.."/cservice/?.so;"..skynet_root.."/cservice/?.so"
+luaservice = server_root.."/service/?.lua;"..skynet_root.."/service/?.lua"
+
+lualoader = skynet_root.."/lualib/loader.lua"
 snax = skynet_root.."?.lua;"
 
 if "$OS" == "Linux" then
